--- a/index.html
+++ b/index.html
@@ -1,37 +1,155 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-UK">
+
 
 <head>
-
-    <!-- Google Fonts-->
-    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
-
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Ikiliagwu Eloke web development website prototyped with Adobe XD">
-    <meta name="author" content="Ikiliagwu Eloke">
-    <meta name="robots" content="follow"/>
-
-    <link rel="stylesheet" href="style.css">
-    <title>Ikiliagwuu Eloke</title>
+		<title>Ikiliagwu Eloke</title>
+		<!-- Meta Tags -->
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="Ikiliagwu Eloke web development website prototyped with Adobe XD">
+		<meta name="author" content="Ikiliagwu Eloke">
+		<meta name="robots" content="follow"/>
+		<!-- Google Fonts-->
+		<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+		<!-- External Linked Pages-->
+		<link rel="stylesheet" href="style.css">
+		<!-- Font Awesome Kit Code-->
+		<script src="https://kit.fontawesome.com/60c577ea36.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
-    <header>
-        
-        <div class="container container-nav">
-            <div>
-                <img src="images/ikiliagwuElokeLogo.png" alt="Logo" id="ikiliagwu-eloke-logo">
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="#" class="current-page">About</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Blog</a></li>
-                </ul>
-            </nav>
-        </div>
 
-    </header>
+<body>
+	<header>
+		<div class="container container-nav">
+			<div class="svg svg-logo">
+				<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="60.349" height="50%" viewBox="0 0 60.349 64.682">
+					<defs>
+						<filter id="Path_85" x="0" y="0.682" width="48.136" height="64" filterUnits="userSpaceOnUse">
+							<feOffset dx="5" input="SourceAlpha"/>
+							<feGaussianBlur stdDeviation="5" result="blur"/>
+							<feFlood flood-opacity="0.161"/>
+							<feComposite operator="in" in2="blur"/>
+							<feComposite in="SourceGraphic"/>
+						</filter>
+					</defs>
+					<g id="Group_37" data-name="Group 37" transform="translate(-693.941 -9.596)">
+						<path id="Path_84" data-name="Path 84" d="M.476,5.053C-1.6,11.789,3.578,32,7.385,32S17.432,11.789,15.7,5.053,2.556-1.684.476,5.053Z" transform="translate(753.067 10.673) rotate(90)" fill="none" stroke="#070707" stroke-width="2"/>
+						<path id="Path_86" data-name="Path 86" d="M.476,5.053C-1.6,11.789,3.578,32,7.385,32S17.432,11.789,15.7,5.053,2.556-1.684.476,5.053Z" transform="translate(753.29 26.976) rotate(90)" fill="none" stroke="#070707" stroke-width="2"/>
+						<path id="Path_87" data-name="Path 87" d="M.476,5.053C-1.6,11.789,3.578,32,7.385,32S17.432,11.789,15.7,5.053,2.556-1.684.476,5.053Z" transform="translate(753.29 43.279) rotate(90)" fill="none" stroke="#070707" stroke-width="2"/>
+						<g transform="matrix(1, 0, 0, 1, 693.94, 9.6)" filter="url(#Path_85)">
+							<path id="Path_85-2" data-name="Path 85" d="M.476,5.053C-1.6,11.789,3.578,32,7.385,32S17.432,11.789,15.7,5.053,2.556-1.684.476,5.053Z" transform="translate(27.06 48.68) rotate(180)" fill="none" stroke="#070707" stroke-width="2"/>
+						</g>
+						<g id="Path_145" data-name="Path 145" transform="translate(705.245 10)">
+							<path d="M 8 15 C 4.140190124511719 15 1 11.85980987548828 1 8 C 1 4.140190124511719 4.140190124511719 1 8 1 C 11.85980987548828 1 15 4.140190124511719 15 8 C 15 11.85980987548828 11.85980987548828 15 8 15 Z" stroke="none"/>
+							<path d="M 8 2 C 4.691590309143066 2 2 4.691590309143066 2 8 C 2 11.30841064453125 4.691590309143066 14 8 14 C 11.30841064453125 14 14 11.30841064453125 14 8 C 14 4.691590309143066 11.30841064453125 2 8 2 M 8 0 C 12.41827964782715 0 16 3.581720352172852 16 8 C 16 12.41827964782715 12.41827964782715 16 8 16 C 3.581720352172852 16 0 12.41827964782715 0 8 C 0 3.581720352172852 3.581720352172852 0 8 0 Z" stroke="none" fill="#070707"/>
+						</g>
+					</g>
+				</svg>
+			</div>
+			<nav>
+				<ul>
+					<li><a href="#" class="current-page">HOME</a></li>
+					<li><a href="#">ABOUT</a></li>
+					<li><a href="#">PROJECTS</a></li>
+					<li><a href="#">BLOG</a></li>
+				</ul>
+			</nav>
+		</div>
+	</header>
+
+	<div class="container container-main">
+		<!-- <aside>
+			<ul>
+					<li><a href="https://twitter.com/ikiliagwueloke" target="_blank"><i class="fab fa-twitter font-awesome fa-fw"></i></a></li>
+					<li><a href="https://github.com/ikiliagwueloke" target="_blank"><i class="fab fa-github font-awesome fa-fw"></i></a></li>
+					<li><a href="mailto:ikiliagwueloke@gmail.com" target="_blank"><i class="far fa-envelope font-awesome fa-fw"></i></a></li>
+					<li><a href="https://medium.com/@ikiliagwueloke" target="_blank"><i class="fab fa-medium-m font-awesome fa-fw"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/ikiliagwu-eloke-a02300167" target="_blank"><i class="fab fa-linkedin font-awesome fa-fw"></i></a></li>
+			</ul>
+		</aside> -->
+		<main>
+			<div class="svg svg-main">
+				<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="429.46" viewBox="0 0 673.592 429.46">
+					<g id="Group_40" data-name="Group 40" transform="translate(-172.9 -202.54)">
+					  <rect id="Rectangle_36" data-name="Rectangle 36" width="673" height="429" transform="translate(173 203)" fill="#fff"/>
+					  <g id="Group_35" data-name="Group 35" transform="translate(241 202.54)">
+						<g id="Rectangle_34" data-name="Rectangle 34" transform="translate(-68 424.46)" fill="#969696" stroke="#000" stroke-width="0.5">
+						  <rect width="673" height="5" rx="2" stroke="none"/>
+						  <rect x="0.25" y="0.25" width="672.5" height="4.5" rx="1.75" fill="none"/>
+						</g>
+						<rect id="Rectangle_32" data-name="Rectangle 32" width="10.24" height="211.599" rx="5.12" transform="matrix(0.967, 0.254, -0.254, 0.967, 535.343, 216.924)" fill="#d8d8d8" stroke="#000" stroke-width="0.5"/>
+						<rect id="Rectangle_31" data-name="Rectangle 31" width="10.24" height="211.599" rx="5.12" transform="matrix(-0.967, 0.254, -0.254, -0.967, 605.187, 421.566)" fill="#d8d8d8" stroke="#000" stroke-width="0.5"/>
+						<ellipse id="Ellipse_1" data-name="Ellipse 1" cx="63.11" cy="13.95" rx="63.11" ry="13.95" transform="translate(335.426 293.47)" stroke="#000" stroke-width="0.5"/>
+						<line id="Line_1" data-name="Line 1" x2="35.45" y2="110.95" transform="translate(398.386 307.42)" fill="none" stroke="#000" stroke-linecap="round" stroke-miterlimit="10" stroke-width="4"/>
+						<path id="Path_147" data-name="Path 147" d="M35.45,0,0,110.95" transform="translate(363.386 307.42)" fill="none" stroke="#000" stroke-linecap="round" stroke-width="4"/>
+						<path id="Path_148" data-name="Path 148" d="M39.52,25.34,0,0" transform="translate(382.846 356.6)" fill="none" stroke="#000" stroke-linecap="round" stroke-width="2"/>
+						<line id="Line_4" data-name="Line 4" x1="39.53" y2="25.34" transform="translate(374.998 356.6)" fill="none" stroke="#000" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2"/>
+						<path id="Path_1" data-name="Path 1" d="M393.25,356.86c.16,4.92.09,22.15.9,29.52" transform="translate(-55.979 -169.54)" fill="none" stroke="#1f161e" stroke-linecap="round" stroke-miterlimit="10" stroke-width="1"/>
+						<g id="Group_39" data-name="Group 39" transform="translate(-670 -2)">
+						  <path id="Path_3" data-name="Path 3" d="M63.487,430c-19,3.6-15.61,117,20.86,110.14C118.787,533.6,86.667,425.59,63.487,430Z" transform="translate(575.113 -169.54)"/>
+						  <g id="Group_38" data-name="Group 38">
+							<path id="Path_4" data-name="Path 4" d="M56.95,444c-15.12-8.56-78.41,71.08-49.46,87.46C34.84,547,75.36,454.44,56.95,444Z" transform="translate(665.07 -169.54)" fill="#fbdc8e" stroke="#000" stroke-width="1"/>
+							<path id="Path_5" data-name="Path 5" d="M43.3,594.92h38.18a6.25,6.25,0,0,0,6.21-5.56l4.82-43.28a6.26,6.26,0,0,0-6.21-7H38.682a6.25,6.25,0,0,0-6.21,6.92l4.61,43.28A6.26,6.26,0,0,0,43.3,594.92Z" transform="translate(601.668 -169.54)" fill="#969696" stroke="#000" stroke-width="1"/>
+							<path id="Path_6" data-name="Path 6" d="M71.081,385.84c-14.47,4.2-3.38,91.73,24.33,83.67C121.571,461.91,88.691,380.72,71.081,385.84Z" transform="translate(556.789 -169.54)" fill="#ab8de5" stroke="#000" stroke-width="1"/>
+							<path id="Path_7" data-name="Path 7" d="M70.712,455.48c-10,8.62,30.68,74.56,49.9,58C138.762,497.91,82.922,445,70.712,455.48Z" transform="translate(533.298 -169.54)" fill="#fbdc8e" stroke="#000" stroke-width="1"/>
+							<path id="Path_8" data-name="Path 8" d="M62.127,394.94c-21.66,0-41.49,138.3,0,138.3C101.307,533.24,88.5,394.94,62.127,394.94Z" transform="translate(601.833 -169.54)" fill="#78e5e1" stroke="#000" stroke-width="1"/>
+							<rect id="Rectangle_2" data-name="Rectangle 2" width="84.3" height="15.48" rx="4.05" transform="translate(621.9 360.18)" fill="#d8d8d8" stroke="#000" stroke-width="1"/>
+						  </g>
+						</g>
+						<path id="Path_16" data-name="Path 16" d="M522.407,574.68c0,2.37,1.39,17.32-1.38,18.7s-33.22,2.22-34.6.83-2.21-4.29-1-5.12,13-3.18,14.6-4.29,3.81-7,3-10.12" transform="translate(-274.761 -169.54)" fill="#1f161e"/>
+						<path id="Path_17" data-name="Path 17" d="M264.46,379.25l-17.14-6.15c.74-31.27,8.05-101.14,18.43-111.53,2.44-2.43,50.7-6.67,59.31-6.67,51.38,0,66.62,5.86,70.49,9.74,12,12,15.74,67.6,15.74,87.07s-55,29.57-55,29.57l-64.47,4.43s-14.14,1.46-26.37,2.18C265.18,384.14,264.46,379.25,264.46,379.25Z" transform="translate(71.886 -169.54)" fill="#78e5e1" stroke="#000" stroke-width="1"/>
+						<path id="Path_18" data-name="Path 18" d="M548.85,397.38c-4.69-1.39-51.33-9-61.49,1s-42.14,153.37-42.14,156.67h25.75l34.76-74.81" transform="translate(-261.158 -169.54)" fill="#55b79d" stroke="#000" stroke-width="1"/>
+						<path id="Path_19" data-name="Path 19" d="M500.13,384.63c1.17,5.85,8.2,12.13,8.2,44,0,44.07-36.1,45-49.06,45-40.38,0-105.71-12-110.12-14.2-2.93,4.9-56.86,115-57.11,117.46H267.21s15.39-164.72,43.16-183.4C319.39,387.49,479.42,381.07,500.13,384.63Z" transform="translate(-44.101 -169.54)" fill="#55b79d" stroke="#000" stroke-width="1"/>
+						<path id="Path_20" data-name="Path 20" d="M420.39,352.41c6.52,0,11.9,1.55,26.66,4.45l.77,28.24c-14-5.64-17.25-13.48-21.31-13.48-10.14,0-15.44,5.23-21.43,5.23-4.18,0-11.7-3.28-11.7-7.74C393.38,359.77,412.31,352.41,420.39,352.41Z" transform="translate(-109.409 -169.54)" fill="#deb887" stroke="#000" stroke-width="0.5"/>
+						<path id="Path_21" data-name="Path 21" d="M561.777,553.07c0,2.38,1.39,17.32-1.38,18.71s-33.22,2.21-34.6.83-2.21-4.29-1-5.12,13-3.19,14.6-4.3,3.81-7,3-10.12" transform="translate(-353 -169.54)" fill="#1f161e"/>
+						<path id="Path_22" data-name="Path 22" d="M320.75,261.55c0,3.77,21.89,3.88,21.89,0V230.89H320.75Z" transform="translate(67.266 -169.54)" fill="#deb887" stroke="#000" stroke-width="1"/>
+						<path id="Path_23" data-name="Path 23" d="M320.75,241c2,0,14.76,5.64,14.76,8.79V233.15C332.33,233.15,320.75,241,320.75,241Z" transform="translate(74.357 -169.54)" fill="#1f161e"/>
+						<ellipse id="Ellipse_6" data-name="Ellipse 6" cx="26.5" cy="26.5" rx="26.5" ry="26.5" transform="translate(364.498 19.76)" fill="#deb887" stroke="#000" stroke-width="1"/>
+						<path id="Path_24" data-name="Path 24" d="M316.59,195c3.28,5.21,10.14,7.6,17.57,7.6,6.33,0,15.55-1.84,22.11,1.9,3.55,2,7.62,6.55,8.44,15.66,0,1.56,1.77,7.61,1.77,9.56,0,1.33,1.5,2.2,4,2.2,1.29,0,3.84-2.09,3.84-5.28,0-3.69-1.47-5-1.47-8.13s3.83-6.14,3.83-14.84c0-12.53-8-20.25-13.66-20.25-5.16,0-6.78,1.2-7.43,1.71,0-11.39-15-16.59-20.95-16.59-6.8,0-10,2.79-10,6.34,0,5.66,2.7,10.47,4.07,11.55a16.8,16.8,0,0,0-11.3-4.31c-7.79,0-10.41,5.12-10.41,8.62,0,7.61,9.13,14.66,12.53,14.66a36.331,36.331,0,0,1,3-5.19" transform="translate(46.076 -168.54)"/>
+						<ellipse id="Ellipse_8" data-name="Ellipse 8" cx="4.38" cy="2.28" rx="4.38" ry="2.28" transform="translate(360.211 46.56)" fill="#fff" stroke="#000" stroke-width="1"/>
+						<ellipse id="Ellipse_9" data-name="Ellipse 9" cx="4.38" cy="2.28" rx="4.38" ry="2.28" transform="translate(387.424 46.56)" fill="#fff" stroke="#000" stroke-width="1"/>
+						<path id="Path_25" data-name="Path 25" d="M358.379,213.65c-.82,1.17-5,6.08-.59,8.07" transform="translate(16.798 -169.54)" fill="none" stroke="#1f161e" stroke-linecap="round" stroke-miterlimit="10" stroke-width="1"/>
+						<path id="Path_26" data-name="Path 26" d="M343.14,227.45c1.32,0,3.35-1.64,4.42-3.11" transform="translate(40.134 -169.54)" fill="none" stroke="#1f161e" stroke-linecap="round" stroke-miterlimit="10" stroke-width="1"/>
+						<path id="Path_27" data-name="Path 27" d="M394.15,298.62c-2,4.25-11.65,45.25-11.65,58.24" transform="translate(-45.292 -169.54)" fill="none" stroke="#1f161e" stroke-linecap="round" stroke-miterlimit="10" stroke-width="1"/>
+						<path id="Path_28" data-name="Path 28" d="M417.97,348.41c0,46.09-.43,59.46-18.93,59.46-42.64,0-107.1-35-118.59-35-10.15,0-15.45,5.24-21.44,5.24-4.17,0-11.69-3.29-11.69-7.74,0-9.35,18.93-16.71,27-16.71,18.17,0,90.68,17.52,92.45,17.52s4.75-.77,4.75-3.75c0-5.41-3.54-17.91-4-19Z" transform="translate(65.251 -169.54)" fill="#deb887" stroke="#000" stroke-width="0.5"/>
+						<path id="Path_29" data-name="Path 29" d="M296.59,308.21c1.22,3.51,10.73,39.78,11.83,44.2" transform="translate(125.295 -169.54)" fill="none" stroke="#1f161e" stroke-linecap="round" stroke-miterlimit="10" stroke-width="1"/>
+						<rect id="Rectangle_24" data-name="Rectangle 24" width="10.24" height="211.599" rx="5.12" transform="matrix(0.967, 0.254, -0.254, 0.967, 108.793, 216.909)" fill="#969696" stroke="#000" stroke-width="0.5"/>
+						<rect id="Rectangle_25" data-name="Rectangle 25" width="10.24" height="211.599" rx="5.12" transform="matrix(-0.967, 0.254, -0.254, -0.967, 178.654, 421.558)" fill="#969696" stroke="#000" stroke-width="0.5"/>
+						<rect id="Rectangle_26" data-name="Rectangle 26" width="10.24" height="211.599" rx="5.12" transform="matrix(-0.967, 0.254, -0.254, -0.967, 248.369, 421.557)" fill="#d8d8d8" stroke="#000" stroke-width="0.5"/>
+						<rect id="Rectangle_27" data-name="Rectangle 27" width="10.257" height="211.959" rx="5.129" transform="translate(177.64 216.767) rotate(14.452)" fill="#d8d8d8" stroke="#000" stroke-width="0.5"/>
+						<rect id="Rectangle_28" data-name="Rectangle 28" width="10.24" height="211.599" rx="5.12" transform="matrix(-0.967, 0.254, -0.254, -0.967, 532.978, 421.563)" fill="#969696" stroke="#000" stroke-width="0.5"/>
+						<rect id="Rectangle_29" data-name="Rectangle 29" width="10.24" height="211.599" rx="5.12" transform="matrix(0.967, 0.254, -0.254, 0.967, 463.134, 216.923)" fill="#969696" stroke="#000" stroke-width="0.5"/>
+						<rect id="Rectangle_30" data-name="Rectangle 30" width="504.23" height="15.15" rx="4.53" transform="translate(81.86 208.6)" fill="#d8d8d8" stroke="#000" stroke-width="0.5"/>
+						<path id="Path_30" data-name="Path 30" d="M443.727,378.14h92.51l-16.76-57.64a6.73,6.73,0,0,0-6.48-4.79H434.5a6.62,6.62,0,0,0-6.48,8.41Z" transform="translate(-231.294 -169.54)" fill="#969696" stroke="#000" stroke-width="1"/>
+						<path id="Path_146" data-name="Path 146" d="M5.66,0a5.66,5.66,0,1,0,5.66,5.66A5.66,5.66,0,0,0,5.66,0Z" transform="translate(241.509 171.72)" fill="#55b79d" stroke="#000" stroke-width="1"/>
+						<rect id="Rectangle_33" data-name="Rectangle 33" width="64.91" height="4.05" rx="1" transform="translate(303.852 204.55)" fill="#969696" stroke="#000" stroke-width="1"/>
+						<g id="Books" transform="translate(438 138.35)">
+						  <path id="Union_2" data-name="Union 2" d="M1.229,6.59A1.229,1.229,0,0,1,0,5.36V4.6A1.229,1.229,0,0,1,1.229,3.371H30.39A2.492,2.492,0,0,1,32.72,0h6.26a2.492,2.492,0,0,1,2.33,3.371h65.839A2.492,2.492,0,0,1,109.48,0h6.26a2.492,2.492,0,0,1,2.329,3.371H147.23A1.229,1.229,0,0,1,148.46,4.6v.76A1.229,1.229,0,0,1,147.23,6.59Z" transform="translate(148.46 70.53) rotate(180)" fill="#d8d8d8" stroke="#000" stroke-width="0.5"/>
+						  <rect id="Rectangle_6" data-name="Rectangle 6" width="13.99" height="63.94" rx="2.56" transform="translate(83)" fill="#969696" stroke="#000" stroke-width="0.5"/>
+						  <rect id="Rectangle_7" data-name="Rectangle 7" width="7" height="48.95" rx="2.13" transform="translate(76 14.99)" fill="#d8d8d8" stroke="#000" stroke-width="0.5"/>
+						  <rect id="Rectangle_8" data-name="Rectangle 8" width="7" height="48.95" rx="2.06" transform="translate(69 14.99)" fill="#969696" stroke="#000" stroke-width="0.5"/>
+						  <rect id="Rectangle_9" data-name="Rectangle 9" width="7" height="48.95" rx="2.2" transform="translate(49.923 64.984) rotate(-155.34)" fill="#d8d8d8" stroke="#000" stroke-width="0.5"/>
+						  <ellipse id="Ellipse_5" data-name="Ellipse 5" cx="3.91" cy="3.91" rx="3.91" ry="3.91" transform="translate(86.09 39.94)" fill="#d8d8d8" stroke="#161616" stroke-width="0.5"/>
+						  <rect id="Rectangle_10" data-name="Rectangle 10" width="8.96" height="1.88" rx="0.94" transform="translate(85.52 50.1)" fill="#d8d8d8" stroke="#000" stroke-width="0.2"/>
+						  <rect id="Rectangle_11" data-name="Rectangle 11" width="8.96" height="1.88" rx="0.94" transform="translate(85.52 54.91)" fill="#d8d8d8" stroke="#000" stroke-width="0.2"/>
+						  <rect id="Rectangle_17" data-name="Rectangle 17" width="1.46" height="35.62" rx="0.73" transform="translate(78.77 21.65)" fill="#969696" stroke="#000" stroke-width="0.2"/>
+						</g>
+						<text id="_" data-name="&lt;/&gt;" transform="matrix(-1, 0, 0, 1, 398, 161.46)" font-size="20" font-family="Nunito-ExtraBold, Nunito" font-weight="800"><tspan x="0" y="0">&lt;/&gt;</tspan></text>
+						<ellipse id="Ellipse_24" data-name="Ellipse 24" cx="0.5" cy="0.5" rx="0.5" ry="0.5" transform="translate(391 48.46)"/>
+						<ellipse id="Ellipse_25" data-name="Ellipse 25" cx="0.5" cy="0.5" rx="0.5" ry="0.5" transform="translate(364 48.46)"/>
+					  </g>
+					</g>
+				  </svg>
+				  
+			</div>
+					<div class="container-deets">
+							<h1 id="ikiliagwu-eloke">Ikiliagwu Eloke</h1>
+							<h2 id="front-end">Front-End Web Developer</h2>
+							<h3 id="enthusiast">UI/UX Enthusiast</h3>
+					</div>
+		</main>
+	</div>  
+			
 </body>
 </html>
