--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 		</section>
 	</div> <!-- grid-container-->
 	<footer class="grid-footer">
-		Ikiliagwu Eloke &copy;2020 
+		<!-- Ikiliagwu Eloke &copy;2020  -->
 	</footer>
 	<i class="fas fa-arrow-circle-up"></i>
 </body>
