Add icon logo to title bar

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
 <head>
 		<title>Ikiliagwu Eloke</title>
+		<!-- Icon Link -->
+		<link rel="icon" href="images/logo.png" type="image/x-icon">
 		<!-- Meta Tags -->
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,7 +22,7 @@
 
 
 <body>
-	View on desktop/desktop mode (Not <em><strong>responsively</strong></em> built for small screens yet)
+	View on desktop / desktop mode (not <b>responsively</b> built for small screens yet &#128517;)
 	<div class="grid-container">
 
 		<header class="grid-header">
