Responsive header navigation

--- a/index.html
+++ b/index.html
@@ -22,57 +22,41 @@
 
 
 <body>
-	View on desktop / desktop mode (not <b>responsively</b> built for small screens yet &#128517;)
-	<div class="grid-container">
-
-		<header class="grid-header">
-			<div id="header-logo">
-				<svg xmlns="http://www.w3.org/2000/svg" width="53.5" height="50.915" viewBox="0 0 53.5 50.915">
-					<g id="Group_37" data-name="Group 37" transform="translate(-704 -8.423)">
-					  <path id="Path_84" data-name="Path 84" d="M.476,5.053C-1.6,11.789,3.578,32,7.385,32S17.432,11.789,15.7,5.053,2.556-1.684.476,5.053Z" transform="translate(754.5 9.5) rotate(90)" fill="#fff" stroke="#070707" stroke-width="2"/>
-					  <path id="Path_86" data-name="Path 86" d="M.476,2.053C-1.6,8.789,3.578,32,7.385,32S17.432,8.789,15.7,2.053,2.556-4.684.476,2.053Z" transform="translate(753.5 25.976) rotate(90)" fill="#fff" stroke="#070707" stroke-width="2"/>
-					  <path id="Path_87" data-name="Path 87" d="M.476,5.053C-1.6,11.789,3.578,32,7.385,32S17.432,11.789,15.7,5.053,2.556-1.684.476,5.053Z" transform="translate(754.5 42.279) rotate(90)" fill="#fff" stroke="#070707" stroke-width="2"/>
-					  <path id="Path_85" data-name="Path 85" d="M.476,5.053C-1.6,11.789,3.578,32,7.385,32S17.432,11.789,15.7,5.053,2.556-1.684.476,5.053Z" transform="translate(720 58.279) rotate(180)"/>
-					  <g id="Path_145" data-name="Path 145" transform="translate(704 9)">
-						<path d="M 8 15 C 4.140190124511719 15 1 11.85980987548828 1 8 C 1 4.140190124511719 4.140190124511719 1 8 1 C 11.85980987548828 1 15 4.140190124511719 15 8 C 15 11.85980987548828 11.85980987548828 15 8 15 Z" stroke="none"/>
-						<path d="M 8 2 C 4.691590309143066 2 2 4.691590309143066 2 8 C 2 11.30841064453125 4.691590309143066 14 8 14 C 11.30841064453125 14 14 11.30841064453125 14 8 C 14 4.691590309143066 11.30841064453125 2 8 2 M 8 0 C 12.41827964782715 0 16 3.581720352172852 16 8 C 16 12.41827964782715 12.41827964782715 16 8 16 C 3.581720352172852 16 0 12.41827964782715 0 8 C 0 3.581720352172852 3.581720352172852 0 8 0 Z" stroke="none" fill="#fff"/>
-					  </g>
-					</g>
-				  </svg>				  
-			</div> <!-- headr-logo-->
-			<nav>
-				<ul class="header-nav">
-					<li><a href="" id="current-page">Home</a></li>
-					<li><a href="">About</a></li>
-					<li><a href="">Blog</a></li>
-					<li><a href="">Projects</a></li>
-				</ul>
-			</nav> <!-- header-nav-->
-		</header>
-
-		<aside class="grid-aside">
-			<ul id="aside-nav">
-				<li><a href="https://github.com/ikiliagwueloke" target="_blank"><i class="fab fa-github font-awesome fa-fw"></i></a></li>
-				<li><a href="https://www.linkedin.com/in/ikiliagwu-eloke-a02300167" target="_blank"><i class="fab fa-linkedin font-awesome fa-fw"></i></a></li>
-				<li><a href="mailto:ikiliagwueloke@gmail.com" target="_blank"><i class="far fa-envelope font-awesome fa-fw"></i></a></li>
-				<li><a href="https://medium.com/@ikiliagwueloke" target="_blank"><i class="fab fa-medium-m font-awesome fa-fw"></i></a></li>
-				<li><a href="https://twitter.com/ikiliagwueloke" target="_blank"><i class="fab fa-twitter font-awesome fa-fw"></i></a></li>
-			</ul> <!-- aside-nav -->
-		</aside>
-
-		<main class="grid-main">
-			<div>
-				<h1 id="ikiliagwu-eloke">Ikiliagwu Eloke</h1>
-				<h3 id="front-end">Front-End Web Developer</h2>
-				<h5 id="ui-ux">UI/UX Enthusiast</h5>
-			</div>
-		</main>
-
-		<section class="grid-section">
-			<svg xmlns="http://www.w3.org/2000/svg" width="500" height="429.46" viewBox="0 0 673.592 429.46">
-				<g id="Group_40" data-name="Group 40" transform="translate(-172.9 -202.54)">
-				  <rect id="Rectangle_36" data-name="Rectangle 36" width="673" height="429" transform="translate(173 203)" fill="#fff"/>
-				  <g id="Group_35" data-name="Group 35" transform="translate(241 202.54)">
+	<header class="grid-header">
+		<div id="header-logo">
+			<svg xmlns="http://www.w3.org/2000/svg" width="53.5" height="30.915" viewBox="0 0 53.5 50.915">
+				<g id="Group_37" data-name="Group 37" transform="translate(-704 -8.423)">
+				  <path id="Path_84" data-name="Path 84" d="M.476,5.053C-1.6,11.789,3.578,32,7.385,32S17.432,11.789,15.7,5.053,2.556-1.684.476,5.053Z" transform="translate(754.5 9.5) rotate(90)" fill="#fff" stroke="#070707" stroke-width="2"/>
+				  <path id="Path_86" data-name="Path 86" d="M.476,2.053C-1.6,8.789,3.578,32,7.385,32S17.432,8.789,15.7,2.053,2.556-4.684.476,2.053Z" transform="translate(753.5 25.976) rotate(90)" fill="#fff" stroke="#070707" stroke-width="2"/>
+				  <path id="Path_87" data-name="Path 87" d="M.476,5.053C-1.6,11.789,3.578,32,7.385,32S17.432,11.789,15.7,5.053,2.556-1.684.476,5.053Z" transform="translate(754.5 42.279) rotate(90)" fill="#fff" stroke="#070707" stroke-width="2"/>
+				  <path id="Path_85" data-name="Path 85" d="M.476,5.053C-1.6,11.789,3.578,32,7.385,32S17.432,11.789,15.7,5.053,2.556-1.684.476,5.053Z" transform="translate(720 58.279) rotate(180)"/>
+				  <g id="Path_145" data-name="Path 145" transform="translate(704 9)">
+					<path d="M 8 15 C 4.140190124511719 15 1 11.85980987548828 1 8 C 1 4.140190124511719 4.140190124511719 1 8 1 C 11.85980987548828 1 15 4.140190124511719 15 8 C 15 11.85980987548828 11.85980987548828 15 8 15 Z" stroke="none"/>
+					<path d="M 8 2 C 4.691590309143066 2 2 4.691590309143066 2 8 C 2 11.30841064453125 4.691590309143066 14 8 14 C 11.30841064453125 14 14 11.30841064453125 14 8 C 14 4.691590309143066 11.30841064453125 2 8 2 M 8 0 C 12.41827964782715 0 16 3.581720352172852 16 8 C 16 12.41827964782715 12.41827964782715 16 8 16 C 3.581720352172852 16 0 12.41827964782715 0 8 C 0 3.581720352172852 3.581720352172852 0 8 0 Z" stroke="none" fill="#fff"/>
+				  </g>
+				</g>
+			  </svg>				  
+		</div> <!-- headr-logo-->
+		<nav>
+			<ul class="header-nav">
+				<li><a href="" id="current-page">Home</a></li>
+				<li><a href="">About</a></li>
+				<li><a href="">Blog</a></li>
+				<li><a href="">Projects</a></li>
+			</ul>
+		</nav> <!-- header-nav-->
+	</header>
+	
+	<main class="grid-main">
+		<div class="main-text">
+			<h1 id="ikiliagwu-eloke">Ikiliagwu Eloke</h1>
+			<h3 id="front-end">Front-End Web Developer</h2>
+			<h5 id="ui-ux">UI/UX Enthusiast</h5>
+		</div>
+		<div>
+			<svg class="svg-graphic" xmlns="http://www.w3.org/2000/svg" width="673.592" height="429.46" viewBox="0 0 673.592 429.46">
+				<g id="Group_40" data-name="Group 40" transform="translate(-345.9 -235.54)">
+				  <g id="Group_35" data-name="Group 35" transform="translate(414 235.54)">
 					<g id="Rectangle_34" data-name="Rectangle 34" transform="translate(-68 424.46)" fill="#969696" stroke="#000" stroke-width="0.5">
 					  <rect width="673" height="5" rx="2" stroke="none"/>
 					  <rect x="0.25" y="0.25" width="672.5" height="4.5" rx="1.75" fill="none"/>
@@ -88,9 +72,9 @@
 					<g id="Group_39" data-name="Group 39" transform="translate(-670 -2)">
 					  <path id="Path_3" data-name="Path 3" d="M63.487,430c-19,3.6-15.61,117,20.86,110.14C118.787,533.6,86.667,425.59,63.487,430Z" transform="translate(575.113 -169.54)"/>
 					  <g id="Group_38" data-name="Group 38">
-						<path id="Path_4" data-name="Path 4" d="M56.95,444c-15.12-8.56-78.41,71.08-49.46,87.46C34.84,547,75.36,454.44,56.95,444Z" transform="translate(665.07 -169.54)" fill="#fbdc8e" stroke="#000" stroke-width="1"/>
+						<path id="Path_4" data-name="Path 4" d="M56.95,444c-15.12-8.56-78.41,71.08-49.46,87.46C34.84,547,75.36,454.44,56.95,444Z" transform="translate(665.07 -169.54)" fill="#ffc83d" stroke="#000" stroke-width="1"/>
 						<path id="Path_5" data-name="Path 5" d="M43.3,594.92h38.18a6.25,6.25,0,0,0,6.21-5.56l4.82-43.28a6.26,6.26,0,0,0-6.21-7H38.682a6.25,6.25,0,0,0-6.21,6.92l4.61,43.28A6.26,6.26,0,0,0,43.3,594.92Z" transform="translate(601.668 -169.54)" fill="#969696" stroke="#000" stroke-width="1"/>
-						<path id="Path_6" data-name="Path 6" d="M71.081,385.84c-14.47,4.2-3.38,91.73,24.33,83.67C121.571,461.91,88.691,380.72,71.081,385.84Z" transform="translate(556.789 -169.54)" fill="#ab8de5" stroke="#000" stroke-width="1"/>
+						<path id="Path_6" data-name="Path 6" d="M71.081,385.84c-14.47,4.2-3.38,91.73,24.33,83.67C121.571,461.91,88.691,380.72,71.081,385.84Z" transform="translate(556.789 -169.54)" fill="#7c40f1" stroke="#000" stroke-width="1"/>
 						<path id="Path_7" data-name="Path 7" d="M70.712,455.48c-10,8.62,30.68,74.56,49.9,58C138.762,497.91,82.922,445,70.712,455.48Z" transform="translate(533.298 -169.54)" fill="#fbdc8e" stroke="#000" stroke-width="1"/>
 						<path id="Path_8" data-name="Path 8" d="M62.127,394.94c-21.66,0-41.49,138.3,0,138.3C101.307,533.24,88.5,394.94,62.127,394.94Z" transform="translate(601.833 -169.54)" fill="#78e5e1" stroke="#000" stroke-width="1"/>
 						<rect id="Rectangle_2" data-name="Rectangle 2" width="84.3" height="15.48" rx="4.05" transform="translate(621.9 360.18)" fill="#d8d8d8" stroke="#000" stroke-width="1"/>
@@ -139,12 +123,25 @@
 					<ellipse id="Ellipse_25" data-name="Ellipse 25" cx="0.5" cy="0.5" rx="0.5" ry="0.5" transform="translate(364 48.46)"/>
 				  </g>
 				</g>
-			  </svg>			  
-		</section>
-	</div> <!-- grid-container-->
+			  </svg>			
+		</div>
+	</main>
+
+	<section class="grid-section">
+				
+	</section>
+
+	<!-- <i class="fas fa-arrow-circle-up"></i>
+	
 	<footer class="grid-footer">
+		<ul id="aside-nav">
+			<li><a href="https://github.com/ikiliagwueloke" target="_blank"><i class="fab fa-github font-awesome fa-fw"></i></a></li>
+			<li><a href="https://www.linkedin.com/in/ikiliagwu-eloke-a02300167" target="_blank"><i class="fab fa-linkedin font-awesome fa-fw"></i></a></li>
+			<li><a href="mailto:ikiliagwueloke@gmail.com" target="_blank"><i class="far fa-envelope font-awesome fa-fw"></i></a></li>
+			<li><a href="https://medium.com/@ikiliagwueloke" target="_blank"><i class="fab fa-medium-m font-awesome fa-fw"></i></a></li>
+			<li><a href="https://twitter.com/ikiliagwueloke" target="_blank"><i class="fab fa-twitter font-awesome fa-fw"></i></a></li>
+		</ul>
 		<!-- Ikiliagwu Eloke &copy;2020  -->
-	</footer>
-	<i class="fas fa-arrow-circle-up"></i>
+	</footer> -->
 </body>
 </html>
