Remove header.js script tag
Delete commented code

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 	<script src="https://kit.fontawesome.com/60c577ea36.js" crossorigin="anonymous"></script>
 	<!-- Anchor Links Smooth Scrolling-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<!-- <script src="header.js" defer></script> -->
 </head>
 
 
@@ -80,14 +79,14 @@
 	<section id="projects">
 	</section>
 
-	<footer>
-		&copy; Ikiliagwu Eloke
+	<footer id="footer">
+
 	</footer>
 
 	<button id="top-button" onclick="topFunction()" title="Go to top">
 		<a href="#home"><i id="top-icon" class="fas fa-angle-double-up fa-fw"></i></a>
 	</button>
-	
+
 </body>
 
 
